--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@ header {
   background: url(/Hero.png);
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
-
+  overflow-x: hidden;
   align-items: center;
   padding: 1.8rem;
 }
@@ -35,8 +36,14 @@ nav .logo-text-1 {
   font-size: 1.3rem;
 }
 
-.nav-main {
+#menu-icon {
+  font-size: 2rem;
+  z-index: 1000;
+  display: none;
+  color: white;
 }
+
+
 
 .nav-main .nav-list {
   padding: 1rem;
@@ -114,7 +121,6 @@ section {
   flex-direction: column;
   gap: 1.9rem;
   padding: 0 2.5rem;
- 
 }
 
 .section-title .section-h3 {
@@ -196,7 +202,7 @@ section {
 .content-2 {
   display: flex;
   gap: 2.5rem;
-z-index: 1;
+  z-index: 1;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
@@ -232,6 +238,7 @@ z-index: 1;
   justify-content: center;
   gap: 5rem;
   height: 100%;
+  flex-wrap: wrap;
   align-items: center;
   padding: 5rem 0;
 }
@@ -240,8 +247,6 @@ z-index: 1;
   text-align: center;
 }
 
-.card-content .card-img {
-}
 
 .card-content .card-h1 {
   font-size: 1.4rem;
@@ -261,8 +266,6 @@ z-index: 1;
 
 /* appointment-section-- */
 
-.appointment-section {
-}
 
 .appointment-container {
   display: flex;
@@ -270,6 +273,7 @@ z-index: 1;
 
 .labour-img {
   width: 100%;
+  background: url(/back-2.png);
 }
 
 .appointment-text {
@@ -285,8 +289,6 @@ z-index: 1;
   text-align: center;
 }
 
-.appointment-text .text-main {
-}
 
 .text-main .text {
   font-size: 3rem;
@@ -318,8 +320,6 @@ z-index: 1;
 
 /* appointment-section--2 */
 
-.appointment-section-2 {
-}
 
 .appointment-container-2 {
   display: flex;
@@ -338,8 +338,6 @@ z-index: 1;
   text-align: center;
 }
 
-.appointment-text-2 .text-main-2 {
-}
 
 .text-main-2 .h1 {
   font-size: 3rem;
@@ -369,398 +367,573 @@ z-index: 1;
 
 .labour-img-1 {
   width: 100%;
+  background: url(/back-2.png);
+}
+
+.labour-img-1 .labour-dp-2 {
+  height: 100%;
 }
 
 /* -------------- */
 
 /* pricing-section */
 
-.pricing-list{
-   
-    background: url(/price-back.png);
+.pricing-list {
+  background: url(/price-back.png);
 }
 
-.price-container{
-    color: white;
-display: flex;
-justify-content: center;
-gap: 3rem;
-padding: 10rem 2rem;
+.price-container {
+  color: white;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  padding: 10rem 2rem;
 }
 
-.price-text{
 
+
+.price-text .price-h1 {
+  font-size: 3.5rem;
+  font-weight: 500;
+  line-height: 4.5rem;
+  text-align: end;
 }
 
-.price-text .price-h1{
-font-size: 3.5rem;
-font-weight: 500;
-line-height: 4.5rem;
-text-align: end;
-
+.price-text-2 {
+  line-height: 3.9rem;
 }
 
-.price-text-2{
-line-height: 3.9rem;
+.price-text-2 .price-span-list {
+  display: flex;
+  align-items: start;
+  gap: 0.3rem;
 }
 
-.price-text-2 .price-span-list{
-display: flex;
-align-items: start;
-gap: 0.3rem;
-
+.price-text-2 .price-span-list .price-span {
+  font-size: 1.3rem;
+  font-weight: 400;
+  letter-spacing: 0.2rem;
 }
 
-.price-text-2 .price-span-list .price-span{
-font-size: 1.3rem;
-font-weight: 400;
-letter-spacing: 0.2rem;
-}
-
-.price-text-2 .price-span-list .price-span-2{
-    font-size: 1.3rem;
-    font-weight: 400;
+.price-text-2 .price-span-list .price-span-2 {
+  font-size: 1.3rem;
+  font-weight: 400;
 }
 
 /* ----------- */
 
 /* contact-section */
 
-.contact-us{
-   
-    background: #F4EDE6;
+.contact-us {
+  background: #f4ede6;
 }
 
-.contact-container{
-display: flex;
-gap: 5rem;
+.contact-container {
+  display: flex;
+  gap: 5rem;
 }
 
-.contact-main{
-    height: 100%;
-   width: 50%;
-   position: relative;
+.contact-main {
+  width: 100%;
+
+  position: relative;
 }
 
-.contact-img{
-height: 100%;
-
+.contact-img {
+  height: 100%;
 }
 
-.contact-img .contact-dp{
-
+.contact-img .contact-dp {
+  width: 100%;
+  height: 100%;
 }
 
-.contact-text{
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50% , -50%);
-color: white;
+.contact-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
-.contact-text .contact-h1{
-font-size: 3rem;
-font-weight: 500;
-text-align: center;
-letter-spacing: 0.2rem;
-text-transform: uppercase;
-background: rgba(0, 0, 0, 0.5);
-backdrop-filter: blur(15px);
-padding: 1rem 2rem;
-}
-
-
-.contact-input{
-display: flex;
-justify-content: center;
-width: 100%;
-flex-direction: column;
-padding: 0 3rem;
-gap: 2.5rem;
-
+.contact-text .contact-h1 {
+  font-size: 3rem;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(15px);
+  padding: 0 1.2rem;
 }
 
-.input-main{
-display: flex;
-flex-direction: column;
-gap: 1rem;
-
-
+.contact-input {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  padding: 0 3rem;
+  gap: 2.5rem;
 }
 
-.input-main .user-detail{
-font-size: 1.1rem;
-letter-spacing: 0.1rem;
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
 }
 
-.input-main .input{
-background: transparent;
-border: none;
-border-bottom: 1px solid black;
-width: 30rem;
-outline: none;
+.input-main {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.contact-btn{
-width: 15rem;
-padding: 0.9rem 2rem;
-border: none;
-letter-spacing: 0.1rem;
-background: black;
-color: white;
+.input-main .user-detail {
+  font-size: 1.1rem;
+  letter-spacing: 0.1rem;
+}
+
+.input-main .input {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid black;
+  width: 30rem;
+  outline: none;
+}
+
+.contact-btn {
+  width: 15rem;
+  padding: 0.9rem 2rem;
+  border: none;
+  letter-spacing: 0.1rem;
+  background: black;
+  color: white;
 }
 
 /* ------------- */
 
 /* ------footer-section----- */
 
-footer{
-   
-    background: rgb(0, 0, 0);
+footer {
+  background: rgb(0, 0, 0);
 }
 
-.footer-container{
-display: flex;
-justify-content: center;
-gap: 6rem;
-padding: 5rem 2rem;
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 6rem;
+  padding: 5rem 2rem;
 }
 
-
-
-.footer-text{
-display: flex;
-flex-direction: column;
-gap: 1rem;
+.footer-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.footer-logo{
- letter-spacing: 0.1rem;
- color: white;
+.footer-logo {
+  letter-spacing: 0.1rem;
+  color: white;
 }
 
-.footer-logo .footer-logo-1{
- border: 2px solid rgb(255, 255, 255);
+.footer-logo .footer-logo-1 {
+  border: 2px solid rgb(255, 255, 255);
   font-size: 1.3rem;
   padding: 0.1rem 0.5rem;
-  
+
   font-weight: 500;
 }
 
-.footer-logo .footer-logo-2{
- font-size: 1.3rem;
-   font-weight: 500;
-   color: white;
-}
-
-.footer-text .footer-h3{
-font-size: 0.9rem;
-font-weight: 300;
-color: #B3B3B3;
-}
-
-.footer-text .footer-icon{
-margin-top: 2rem;
-}
-
-.footer-text .footer-icon i{
-padding: 0.5rem;
-margin: 0.5rem;
-font-size: 1.2rem;
-background: white;
-border-radius: 10rem;
-}
-
-
-.footer-text-2{
+.footer-logo .footer-logo-2 {
+  font-size: 1.3rem;
+  font-weight: 500;
   color: white;
-line-height: 2.5rem;
 }
 
-.footer-text-2 .footer-h1-2{
-font-size: 1.2rem;
-font-weight: 500;
-color: #B3B3B3;
-letter-spacing: 0.2rem;
+.footer-text .footer-h3 {
+  font-size: 0.9rem;
+  font-weight: 300;
+  color: #b3b3b3;
 }
 
-.footer-text-2 .footer-h2-2{
-font-size: 0.9rem;
-font-weight: 400;
+.footer-text .footer-icon {
+  margin-top: 2rem;
 }
 
-.footer-text-3{
-display: flex;
-flex-direction: column;
-gap: 2rem;
+.footer-text .footer-icon i {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  font-size: 1.2rem;
+  background: white;
+  border-radius: 10rem;
 }
 
-.footer-text-3 .footer-h1-3{
-font-size: 1.2rem;
-font-weight: 400;
-color: #B3B3B3;
+.footer-text-2 {
+  color: white;
+  line-height: 2.5rem;
 }
 
-.footer-input{
-display: flex;
-flex-direction: column;
+.footer-text-2 .footer-h1-2 {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #b3b3b3;
+  letter-spacing: 0.2rem;
 }
 
-.footer-input .footer-label{
-color: white;
-font-weight: 300;
-font-size: 0.8rem;
-letter-spacing: 0.1rem;
+.footer-text-2 .footer-h2-2 {
+  font-size: 0.9rem;
+  font-weight: 400;
 }
 
-.footer-input .footer-input{
+.footer-text-3 {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.footer-text-3 .footer-h1-3 {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #b3b3b3;
+}
+
+.footer-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-input .footer-label {
+  color: white;
+  font-weight: 300;
+  font-size: 0.8rem;
+  letter-spacing: 0.1rem;
+}
+
+.footer-input .footer-input-1 {
   background: transparent;
   border: none;
   outline: none;
   border-bottom: 1px solid white;
 }
 
-.footer-text-3 .footer-btn{
-padding: 0.5rem 2.5rem;
-border: none;
-letter-spacing: 0.2rem;
-font-size: 1rem;
-width: 8rem;
-font-weight: 500;
-outline: none;
+.footer-text-3 .footer-btn {
+  padding: 0.5rem 2.5rem;
+  border: none;
+  letter-spacing: 0.2rem;
+  font-size: 1rem;
+  width: 8rem;
+  font-weight: 500;
+  outline: none;
 }
 
 /* ---------------- */
 /* Responsive */
 
-@media screen and (max-width:1026px){
-  header{
+@media screen and (max-width: 1026px) {
+  header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     object-position: center;
   }
 
-  .container{
+  .container {
     backdrop-filter: blur(17.5px);
   }
 
-  .section-title .section-h3{
-    font-size: 1.2rem
+  .section-title .section-h3 {
+    font-size: 1.2rem;
   }
 
-  .section-title .section-h1{
-      font-size: 1.8rem;
+  .section-title .section-h1 {
+    font-size: 1.8rem;
   }
 
-.section-img .dp{
-  width: 100%;
+  .section-img .dp {
+    width: 100%;
+  }
+
+  .content-1 .content-h3 {
+    font-size: 1.2rem;
+  }
+
+  .content-1 .content-h1 {
+    font-size: 2.7rem;
+  }
+
+  .content-2-h1 {
+    font-size: 1.1rem;
+  }
+
+  .labour-dp {
+    height: 100%;
+    width: 100%;
+  }
+
+  .labour-dp-2 {
+    height: 100%;
+    width: 100%;
+  }
+
+  .appointment-text {
+    padding: 2rem 2rem;
+  }
+
+  .appointment-text-2 {
+    padding: 1rem 1.2rem;
+  }
+
+  .footer-text {
+    align-items: center;
+  }
+
+  .footer-text-3 .footer-h1-3 {
+    text-align: center;
+  }
+
+  .footer-text-3 {
+    align-items: center;
+  }
+
+  .footer-input .footer-input-1 {
+    width: 24rem;
+  }
 }
 
+@media screen and (max-width: 890px) {
+  header {
+    overflow: hidden;
+  }
+  .appointment-container {
+    flex-direction: column;
+  }
+  .labour-img {
+    padding: 1rem 1.2rem;
+  }
 
+  .appointment-container-2 {
+    flex-direction: column;
+  }
 
-.content-1 .content-h3 {
-  font-size: 1.2rem;
-  
+  .appointment-text-2 {
+    order: 1;
+  }
+
+  .labour-img-1 {
+    padding: 1rem 1.2rem;
+  }
+
+  .labour-dp-2 {
+    height: 100%;
+  }
+
+  .text-main-2 .h1 {
+    font-size: 2.5rem;
+  }
+
+  .text-main-2 .h2 {
+    font-size: 1rem;
+  }
+
+  .appointment-text-2 .h4 {
+    font-size: 0.9rem;
+  }
+
+  .price-container {
+    flex-direction: column;
+    padding: 2rem 2rem;
+  }
+
+  .price-text .price-h1 {
+    text-align: center;
+  }
+
+  .price-text-2 .price-span-list {
+    align-items: center;
+  }
+
+  .price-text-2 .price-span-list {
+    justify-content: center;
+  }
+
+  .price-text-2 .price-span-list .price-span {
+    font-size: 0.9rem;
+    line-height: 1.8rem;
+  }
+
+  #menu-icon {
+    display: block;
+  }
+
+  .nav-main {
+    position: absolute;
+    top: 12%;
+    display: flex;
+    flex-direction: column;
+    z-index: 9999;
+    right: -50%;
+    width: 15rem;
+    height: 27vh;
+    border-radius: 0.5rem;
+    transition: all 0.5s ease;
+    background: rgba(0, 0, 0, 0.367);
+    backdrop-filter: blur(8px);
+  }
+
+  .nav-main.open {
+    right: 2%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .nav-main.open .nav-list {
+    font-size: 0.8rem;
+  }
 }
 
-.content-1 .content-h1 {
-  font-size: 2.7rem;
+@media screen and (max-width: 1280px) {
+  .contact-container {
+    flex-direction: column;
+  }
 
-}
+  .contact-img {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+  }
 
-.content-2-h1{
- font-size: 1.1rem;
-}
+  .contact-img .contact-dp {
+    width: 80%;
+  }
 
-}
-
-@media screen and (max-width:768px){
- nav{
-  flex-direction: column;
-  gap: 1.5rem;
- }
-.container{
-  height: 66vh;
-}
-.header-h1{
-  font-size: 2.7rem;
+  .contact-input {
+    align-items: center;
+    padding-bottom: 2rem;
+  }
 }
 
-.header-h4{
-font-size: 0.9rem;
-}
+@media screen and (max-width: 768px) {
+  nav {
+    gap: 1.5rem;
+  }
+  .container {
+    height: 66vh;
+  }
+  .header-h1 {
+    font-size: 2.7rem;
+  }
 
-.section-container {
-  flex-direction: column;
-  gap: 1rem;
-  justify-content: center;
-  align-items: center;
-}
-.section-img .dp{
-  width: 80%;
-}
+  .header-h4 {
+    font-size: 0.9rem;
+  }
 
-.section-title{
-  order: 1;
-  padding: 2rem 0;
-}
+  .section-container {
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+  .section-img .dp {
+    width: 80%;
+  }
 
-.section-img{
-  padding-top: 2rem;
-  order: 0;
-  display: flex;
-  justify-content: center;
-}
+  .section-title {
+    order: 1;
+    padding: 2rem 0;
+  }
 
-.section-container-2 {
-  flex-direction: column;
-  
-   align-items: center;
-   
-}
+  .section-img {
+    padding-top: 2rem;
+    order: 0;
+    display: flex;
+    justify-content: center;
+  }
 
-.content-1{
-  border: none;
-  padding-right: 0;
+  .section-container-2 {
+    flex-direction: column;
+
+    align-items: center;
+  }
+
+  .content-1 {
+    border: none;
+    padding-right: 0;
     padding-bottom: 3rem;
-  border-bottom: 2px solid black;
+    border-bottom: 2px solid black;
+  }
+
+  .appointment-text-2 {
+    padding: 1rem;
+  }
 }
 
-}
-
-
-@media screen and (max-width:540px){
-  .container{
+@media screen and (max-width: 540px) {
+  .container {
     backdrop-filter: blur(0);
   }
 
-  .header-h1{
-   text-shadow: 7px 4px 3px black;
-  }
-  
-  .header-h4{
+  .header-h1 {
     text-shadow: 7px 4px 3px black;
   }
 
-  .header-h2{
+  .header-h4 {
+    text-shadow: 7px 4px 3px black;
+  }
+
+  .header-h2 {
     font-size: 0.7rem;
     text-shadow: 7px 4px 3px black;
   }
 
-  .section-title{
+  .section-title {
+    padding: 2rem 2rem;
+  }
 
-  padding: 2rem 2rem;
-}
-
-.section-container-2{
-  gap: 2rem;
-}
-.decoration-1{
-  width: 30%;
-}
-
-.decoration{
+  .section-container-2 {
+    gap: 2rem;
+  }
+  .decoration-1 {
     width: 30%;
-}
+  }
+
+  .decoration {
+    width: 30%;
+  }
+
+  .text-main .text {
+    font-size: 2.5rem;
+  }
+
+  .text-main .text-2 {
+    font-size: 1rem;
+  }
+
+  .appointment-text .text-3 {
+    font-size: 0.81rem;
+  }
+
+  .contact-text .contact-h1 {
+    font-size: 1.6rem;
+    padding: 0 0.5rem;
+  }
+
+  .appointment-text-2 {
+    padding: 1rem;
+  }
+
+  .input-main .input {
+    width: 20rem;
+  }
+
+  .input-main .user-detail {
+    font-size: 0.9rem;
+  }
+
+  .footer-container {
+    gap: 3rem;
+  }
+
+  .footer-text-2 {
+    text-align: center;
+  }
 }
