--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 header {
-  height: 90vh;
+  height: 100vh;
   background: url(/Hero.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -264,6 +264,111 @@ section {
 
 /* ------------------- */
 
+/* parellex-- */
+
+.new-section{
+  overflow: hidden;
+  height: 80vh;
+  background: url(/Property\ 1=3.png) no-repeat;
+  background-size: cover;
+  background-position: right;
+ background-attachment: fixed;
+
+}
+
+.new-container{
+display: flex;
+height: 100%;
+align-items: center;
+gap: 5rem;
+
+}
+
+.new-content{
+ position: relative;
+max-width: 36rem;
+height: 20rem;
+background: rgba(0, 0, 0, 0.523);
+ backdrop-filter: blur(10px);
+ border-radius: 0.9rem;
+ margin-left: 1rem;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+gap: 2rem;
+padding: 0.5rem 1rem;
+}
+
+.new-content .new-h1{
+color: white;
+font-size: 2.5rem;
+font-weight: 500;
+}
+
+.new-content .new-h2{
+color: white;
+font-size: 1rem;
+font-weight: 300;
+line-height: 2rem;
+text-align: center;
+}
+
+.new-content .new-btn{
+padding: 0.8rem 3rem;
+letter-spacing: 0.1rem;
+font-weight: 500;
+border: none;
+outline: none;
+}
+
+.input-box{
+width: 39rem;
+height: 25rem;
+background: rgba(0, 0, 0, 0.64);
+backdrop-filter: blur(10px);
+border-radius: 1rem;
+transition: all 0.5s ease;
+position: absolute;
+right: -700%;
+z-index: 9999;
+}
+
+.form{
+align-items: center;
+height: 100%;
+justify-content: center;
+}
+
+.input-box-main{
+display: flex;
+flex-direction: column;
+}
+
+.input-box-main .user-box{
+color: white;
+letter-spacing: 0.1rem;
+}
+
+.input-box-main .input-1{
+background: transparent;
+border: none;
+outline: none;
+width: 24rem;
+border-bottom: 1px solid white;
+}
+
+.input-btn{
+  width: 15rem;
+  padding: 0.8rem 1.5rem;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
+}
+
+.input-box.open1 {
+  left: 120%;
+}
+
 /* appointment-section-- */
 
 
@@ -321,8 +426,10 @@ section {
 /* appointment-section--2 */
 
 
+
 .appointment-container-2 {
   display: flex;
+ 
 }
 
 .appointment-text-2 {
@@ -698,6 +805,20 @@ footer {
   .footer-input .footer-input-1 {
     width: 24rem;
   }
+
+  .new-container{
+    justify-content: center;
+  }
+
+  .input-box{
+    background: rgba(0, 0, 0, 0.956);
+backdrop-filter: blur(5px);
+z-index: 99;
+  }
+
+  .input-box.open1{
+    left: -4%;
+  }
 }
 
 @media screen and (max-width: 890px) {
@@ -771,7 +892,7 @@ footer {
     display: flex;
     flex-direction: column;
     z-index: 9999;
-    right: -50%;
+    right: -100%;
     width: 15rem;
     height: 27vh;
     border-radius: 0.5rem;
@@ -936,4 +1057,29 @@ footer {
   .footer-text-2 {
     text-align: center;
   }
+
+  .new-content{
+width: 100%;
+margin-left: 0;
+padding: 1.5rem 0;
+margin: 0rem 0.4rem;
+height: 23rem;
+text-align: center;
+  }
+
+  .input-box{
+    width: 100%;
+   
+  }
+
+  .form{
+    width: 100%;
+  }
+
+  .input-box.open1 {
+    left: 0%;
+  }
 }
+
+
+
